# tac_view_mobile

./: .gitignore  PLAN.md  README.md  RUN_TAC_VIEW.cmd  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
app/desktop/: tauri.conf.json
app/server/: app.js  overpass.js  runtime-config.js
app/src/: App.tsx  index.css
config/: tac_view.config.example.json
ops/config/: tac_view.config.example.json
ops/scripts/: build_sidecar.mjs  tac_view_build_win.ps1  tauri-runner.mjs
scripts/: build_sidecar.mjs  tac_view_build_win.ps1
server/: app.js  bootstrap.js  runtime-config.js  snapshot-store.js
server/ontology/: layers.js  schema.js  service.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hooks/: useGeolocation.ts  useSatellites.ts  useShips.ts
src/intelligence/: groupController.ts  groupModel.ts
src/lib/: performanceStore.ts
src/ontology/: useOntologySync.ts  useOntologyWorkbench.ts
src/types/: ontology.ts
tacview-main/: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
tacview-main/config/: tac_view.config.example.json
tacview-main/scripts/: tac_view_build_win.ps1  tac_view_dev_smoke.ps1  tauri-runner.mjs
tacview-main/server/: app.js  bootstrap.js  index.js
tacview-main/src/: App.tsx  main.tsx
tacview-main/src-tauri/: tauri.conf.json
tests/contracts/: server-contracts.test.ts
tests/e2e/: run-desktop-smoke.mjs
tests/unit/: flight-layer-utils.test.ts  flight-path-predictor.test.ts  (+3 more)
(+96 files in other folders)
