[package]
name = "tac_view"
version = "0.1.0"
description = "TAC_VIEW desktop shell"
authors = ["TAC_VIEW"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-geolocation = "2"
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1", features = ["v4"] }
